add configurations to webservice